test/ui/tests/name-resolution/exposure/access-outside-reach.stderr
error[E029]: binding `topmost.grotto.deeper-end.Icicle` is private
  --> ${TEST_FOLDER}/name-resolution/exposure/access-outside-reach.lushui:14:40
   |
14 | use grotto.deeper-end.((self as cave) (Icicle as I))
   |                                        ^^^^^^ 
   |

error[E029]: binding `topmost.grotto.deeper-end.Icicle` is private
  --> ${TEST_FOLDER}/name-resolution/exposure/access-outside-reach.lushui:15:16
   |
15 | J: Type = cave.Icicle
   |                ^^^^^^ 
   |

error[E029]: binding `topmost.grotto.deeper-end.rock-face.Ingrown-Stalactite` is private
  --> ${TEST_FOLDER}/name-resolution/exposure/access-outside-reach.lushui:18:30
   |
18 |     use super.cave.rock-face.Ingrown-Stalactite as St
   |                              ^^^^^^^^^^^^^^^^^^ 
   |

error: aborting due to 3 previous errors

